Criação e estilização do header e do filme As vantagens de ser invisível

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>filmeFlix</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <ul>
-        <li>As vantagens de ser invisel</li>
-        <li>Divergente</li>
-        <li>Esquadrão Suicida</li>
-    </ul>
+    <header>
+        <h1>filmesFlix</h1>
+        <nav>
+            <a class="dev" href="dev.html">Desenvolvedores</a>
+            <a class="Desc" href="Desc.html">Descrições</a>
+        </nav>
+    </header>
+    <div class="clear"></div>
+    <h2 class="titulo-AVdsI">As vantagens de ser invisível</h2>
+    <img class="AVdsI" src="img/As-Vantagens-de-ser-Invisivel.jpg" alt="">
+    <div class="clear"></div>
 </body>
 </html>
