Finalização do index

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </main>
 
     <footer>
-        <p>Propriedade de Ana Beatriz, Laiz Detros e Ash</p>
-        <p>TESTE</p>
+        <p class="devs">Propriedade de Ana Beatriz, Laiz e Ash</p>
+        <p class="teste">TESTE</p>
     </footer>
 
 </body>
