Adicionado um pouco do conteudo  da página sobre o filme As vantagens de ser invisível

--- a/AVdS.html
+++ b/AVdS.html
@@ -8,6 +8,19 @@
     <title>As vantagens de ser Invisível | filmeFlix</title>
 </head>
 <body>
-    
+   <header>
+        <h1>filmeFlix</h1>
+        <nav>
+            <a href="inde.html">Home</a>
+            <a href="#">Divergente</a>
+            <a href="#">Esquadrão Suicida</a>
+        </nav>
+   </header>
+   <main>
+       <div>
+           <h2>As vantagens de ser invisível</h2>
+           <img src="img/AVdS-m.jpg" alt="">
+       </div>
+   </main>
 </body>
 </html>
