Termino da página que fala sobre o filme As vantagens de ser invisível, e começo da criação da página que fala sobre o filme Divergente

--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
     <title>filmeFlix</title>
 </head>
 <body>
-    <header class="header"> <!--Cabeçalho-->
+    <header class="header"> <!--Cabeçalho do site-->
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
         <nav class="header-nav"> <!--Menu-->
-            <a class="header-nav-link-1" href="#">As vantagens de ser invisivel</a>
-            <a class="header-nav-link-2" href="#">Divergente</a>
-            <a class="header-nav-link-3" href="#">Esquadrão Suicida</a>
+            <a class="header-nav-link-1" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
+            <a class="header-nav-link-2" href="Divergente.html" target="_self" rel="next">Divergente</a>
+            <a class="header-nav-link-3" href="#" target="_self" rel="next">Esquadrão Suicida</a>
         </nav>
     </header>
-    <main class="main">
+    <main class="main"> <!--Corpo do site-->
             <div class="main-div-1"> <!--Container As vantagens de ser invisível-->
-                <h2 class="main-div-1-tittle-1">As vantagens de ser Invisível</h2> 
-                <img class="main-div-1-image-1" src="img/AVdS-m.jpg" alt=""> <!--Imagem As vantagens de er Invisível-->
+                <h2 class="main-div-1-tittle">As vantagens de ser Invisível</h2> 
+                <img class="main-div-1-image" src="img/AVdS-m.jpg" alt=""> <!--Imagem As vantagens de er Invisível-->
             </div>
            <div class="main-div-2"> <!--Container Divergente-->
-                <h2 class="main-div-2-tittle-2">Divergente</h2>
-                <img class="main-div-2-image-2" src="img/D-m.png" alt=""> <!--Imagem Divergente-->
+                <h2 class="main-div-2-tittle">Divergente</h2>
+                <img class="main-div-2-image" src="img/D-m.png" alt=""> <!--Imagem Divergente-->
            </div>
             <div class="main-div-3"> <!--Container Esquadrão Suicida-->
-                <h2 class="main-div-3-tittle-3">Esquadrão Suicida</h2>
-                <img class="main-div-3-image-3" src="img/SS-m.jpg" alt=""> <!--Imagem Esquadrão Suicida-->
+                <h2 class="main-div-3-tittle">Esquadrão Suicida</h2>
+                <img class="main-div-3-image" src="img/SS-m.jpg" alt=""> <!--Imagem Esquadrão Suicida-->
             </div>
     </main>
-    <footer class="footer">
-        <p class="footer-text"><a class="footer-text-link" href="#">Desenvolvedores</a> | Senac</p>
+    <footer class="footer"> <!--Rodape-->
+        <p class="footer-text"><a class="footer-text-link" href="#" target="_self" rel="next">Desenvolvedores</a> | Senac</p>
     </footer>
 </body>
 </html>
