--- a/AVdS.html
+++ b/AVdS.html
@@ -8,19 +8,42 @@
     <title>As vantagens de ser Invisível | filmeFlix</title>
 </head>
 <body>
-   <header>
-        <h1>filmeFlix</h1>
-        <nav>
-            <a href="inde.html">Home</a>
-            <a href="#">Divergente</a>
-            <a href="#">Esquadrão Suicida</a>
+   <header class="header"> <!--Cabeçalho so site--> 
+        <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
+        <nav  class="header-menu"> <!--Menu-->
+            <a class="header-menu-link-1" href="index.html" target="_self" rel="prev">Home</a>
+            <a class="header-menu-link-2" href="#">Divergente</a>
+            <a class="header-menu-link-3" href="#">Esquadrão Suicida</a>
         </nav>
    </header>
-   <main>
-       <div>
-           <h2>As vantagens de ser invisível</h2>
-           <img src="img/AVdS-m.jpg" alt="">
+   <main  class="main"> <!--Corpo do site-->
+        <div class="main-div-1"> <!--Container dedicado a sinopse do filme-->
+        <h2 class="main-div-1-tittle">Sinopse</h2>
+            <p class="main-div-1-text">
+                Charlie (Logan Lerman) é um jovem que tem dificuldades para interagir em sua nova escola. Com os nervos à flor da pele, ele se sente deslocado no ambiente. Seu professor de literatura, no entanto, acredita nele e o vê como um gênio. Mas Charlie continua a pensar pouco de si... até o dia em que dois amigos, Patrick (Ezra Miller) e Sam (Emma Watson), passam a andar com ele.
+            </p>
+        </div>
+       <div class="main-div-2"> <!--Container dedicado a capa do filme-->
+           <h2 class="main-div-2-tittle">As vantagens de ser invisível</h2>
+           <img class="main-div-2-image" src="img/AVdS-m.jpg" alt="">
+       </div>
+       <div class="main-div-3"> <!--Container dedicado as informação adicionais do flme-->
+        <h2 class="main-div-3-tittle">Informações Adicionais</h2>
+        <p class="main-div-3-text">
+            Titulo: As vantagens de ser invisível.<br>
+            Titulo Original: The Perks of Being a Wallflower.<br>
+            Tempo de Filme: 1h 45m.<br>
+            Classificação Indicativa: +13.<br>
+            Diretor: Stephen Chbosky.<br>
+            Elenco: Adam Hagenbuch, Atticus Cain, Brian Balzerini, Chelsea Zhang, Dihlon McManne.<br>
+            Data de Lançamento: 21 de setembro de 2012.<br>
+            Gênero: Amadurecimento, Drama,Romance, Comédia dramática.<br>
+            Bilheteria: 33,4 milhões USD.<br>
+        </p>      
        </div>
    </main>
+   <footer class="footer"> <!--Rodape-->
+       <p class="footer-text"><a class="footer-text-link"  href="#">Desenvolvedores</a> | Senac</p>
+   </footer>
 </body>
 </html>
