--- a/Divergente.html
+++ b/Divergente.html
@@ -41,5 +41,8 @@
             </p>
         </div>
     </main>
+    <footer class="footer">
+        <p class="footer-text"><a class="footer-text-link" href="#">Desenvolvedores</a> | Senac</p>
+    </footer>
 </body>
 </html>
