Estilização e finalização da página Divergente. Começo da página sobre Esquadrão Suicida

--- a/AVdS.html
+++ b/AVdS.html
@@ -12,7 +12,7 @@
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
         <nav  class="header-menu"> <!--Menu-->
             <a class="header-menu-link-1" href="index.html" target="_self" rel="prev">Home</a>
-            <a class="header-menu-link-2" href="#">Divergente</a>
+            <a class="header-menu-link-2" href="Divergente.html">Divergente</a>
             <a class="header-menu-link-3" href="#">Esquadrão Suicida</a>
         </nav>
    </header>
@@ -30,15 +30,15 @@
        <div class="main-div-3"> <!--Container dedicado as informação adicionais do flme-->
         <h2 class="main-div-3-tittle">Informações Adicionais</h2>
         <p class="main-div-3-text">
-            Titulo: As vantagens de ser invisível.<br>
-            Titulo Original: The Perks of Being a Wallflower.<br>
-            Tempo de Filme: 1h 45m.<br>
-            Classificação Indicativa: +13.<br>
-            Diretor: Stephen Chbosky.<br>
-            Elenco: Adam Hagenbuch, Atticus Cain, Brian Balzerini, Chelsea Zhang, Dihlon McManne.<br>
-            Data de Lançamento: 21 de setembro de 2012.<br>
-            Gênero: Amadurecimento, Drama,Romance, Comédia dramática.<br>
-            Bilheteria: 33,4 milhões USD.<br>
+            Titulo: As vantagens de ser invisível <br>
+            Titulo Original: The Perks of Being a Wallflower <br>
+            Tempo de Filme: 1h 45m <br>
+            Classificação Indicativa: +13<br>
+            Diretor: Stephen Chbosky <br>
+            Elenco: Adam Hagenbuch, Atticus Cain, Brian Balzerini, Chelsea Zhang, Dihlon McManne <br>
+            Data de Lançamento: 21 de setembro de 2012 <br>
+            Gênero: Amadurecimento, Drama,Romance, Comédia dramática <br>
+            Bilheteria: 33,4 milhões USD <br>
         </p>      
        </div>
    </main>
