--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header class="header"> <!--Cabeçalho do site-->
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
-        <nav class="header-nav"> <!--Menu-->
-            <a class="header-nav-link-1" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
-            <a class="header-nav-link-2" href="Divergente.html" target="_self" rel="next">Divergente</a>
-            <a class="header-nav-link-3" href="#" target="_self" rel="next">Esquadrão Suicida</a>
+        <nav class="header-menu"> <!--Menu-->
+            <a class="header-menu-link-1" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
+            <a class="header-menu-link-2" href="Divergente.html" target="_self" rel="next">Divergente</a>
+            <a class="header-menu-link-3" href="ES.html" target="_self" rel="next">Esquadrão Suicida</a>
         </nav>
     </header>
     <main class="main"> <!--Corpo do site-->
