--- a/Divergente.html
+++ b/Divergente.html
@@ -13,7 +13,7 @@
         <nav class="header-menu"> <!--Menu-->
             <a class="header-menu-link-1" href="index.html"target="_self" rel="prev">Home</a>
             <a class="header-menu-link-2" href="AVdS.html"target="_self" rel="prev">As vantagens de ser invisível</a>
-            <a class="header-menu-link-2" href="#"target="_self" rel="prev">Esquadrão Suicida</a>
+            <a class="header-menu-link-2" href="ES.html"target="_self" rel="prev">Esquadrão Suicida</a>
         </nav>
     </header>
     <main class="main">
@@ -30,18 +30,19 @@
         <div class="main-div-3"> <!--Container dedicado as informações adicionais do filme-->
             <h2 class="main-div-3-tittle">Informaçõs Adiocionais</h2>
             <p class="main-div-3-text">
-                Título: <br>
-                Título Original: <br>
-                Tempo de Filme: <br>
-                Classificação Indicativa: <br>
-                Diretor: <br>
-                Elenco: <br>
-                Gênero: <br>
-                Bilheteria: <br>
+                Título: Divergente <br>
+                Título Original: Divergent <br>
+                Tempo de Filme: 2h 19m <br>
+                Classificação Indicativa: +12 <br>
+                Diretor: Neil Burger <br>
+                Elenco: Alex Hashioka, Alice Bowden, Alice Rietveld, Amy Newbold, Ana Corbi <br>
+                Data de Lançamento: 17 de abril de 2014<br>
+                Gênero: Ação, Ficção Científica, Suspense, Aventura, Mistério<br>
+                Bilheteria: 288,9 milhões USD<br>
             </p>
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer"> <!--Rodape-->
         <p class="footer-text"><a class="footer-text-link" href="#">Desenvolvedores</a> | Senac</p>
     </footer>
 </body>
