--- a/ES.html
+++ b/ES.html
@@ -9,7 +9,41 @@
 </head>
 <body>
     <header class="header"> <!--Cabeçalho do site-->
-        
+        <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
+        <nav class="header-menu"> <!--Menu-->
+            <a class="header-menu-link-1" href="index.html">Home</a>
+            <a class="header-menu-link-2" href="AVdS.html">As vantagens de ser invisível</a>
+            <a class="header-menu-link-3" href="Divergente.html">Divergente</a>
+        </nav>
     </header>
+    <main class="main"> <!--Corpo do site-->
+        <div class="main-div-1"> <!--Container dedicado a sinopse do filme--> 
+            <h2 class="main-div-1-tittle">Sinopse</h2>
+            <p class="main-div-1-text">
+                Um time dos mais perigosos e encarcerados supervilões são contratados por uma agência secreta do governo, para combater uma poderosa entidade. No entanto, quando eles percebem que não foram escolhidos apenas para ter sucesso, mas também por sua óbvia culpa quando inevitavelmente falharem, terão que decidir se vale a pena ou não continuar correndo risco de morte.
+            </p>
+        </div>
+        <div class="main-div-2"> <!--Container dedicado a capa do filme-->
+            <h2 class="main-div-2-tittle">Esqudrão Suicida</h2>
+            <img class="main-div-2-image" src="img/SS-m.jpg" alt="">
+        </div>
+        <div class="main-div-3"> <!--Container dedicado as informação adicionais do flme-->
+            <h2 class="main-div-3-tittle">Informações Adicionais</h2>
+            <p class="main-div-3-text">
+                Titulo: Esquadrão Suicida: Acerto de Contas <br>
+                Titulo Original: Suicide Squad <br>
+                Tempo de filme: 2h 10m <br>
+                Classificação Indicativa: +16 <br>
+                Diretor: David Ayer <br>
+                Elenco: Adam Beach, Adewale Akinnuoye-Agbaje, Afsheen Olyaie, Agueda Cardenas, Aidan Devine <br>
+                Data de Lançamento: 4 de agosto de 2016 <br>
+                Gênero: Ação, Filme de super-herói, Fantasia, Ficção científica, Aventura <br>
+                Bilheteria: 746 milhões USD <br>
+            </p>
+        </div>
+    </main>
+    <footer class="footer">
+        <p class="footer-text"><a class="footer-text-link" href="#">Desenvolvedores</a> | Senac</p>
+    </footer>
 </body>
 </html>
