Criação, etilização e finalização da página sobre os desenvolvedores

--- a/AVdS.html
+++ b/AVdS.html
@@ -43,7 +43,7 @@
        </div>
    </main>
    <footer class="footer"> <!--Rodape-->
-       <p class="footer-text"><a class="footer-text-link"  href="#">Desenvolvedores</a> | Senac</p>
+       <p class="footer-text"><a class="footer-text-link"  href="Dev.html">Desenvolvedores</a> | Senac</p>
    </footer>
 </body>
 </html>
