--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
     </main>
     <footer class="footer"> <!--Rodape-->
-        <p class="footer-text"><a class="footer-text-link" href="#" target="_self" rel="next">Desenvolvedores</a> | Senac</p>
+        <p class="footer-text"><a class="footer-text-link" href="Dev.html" target="_self" rel="next">Desenvolvedores</a> | Senac</p>
     </footer>
 </body>
 </html>
