--- a/AVdS.html
+++ b/AVdS.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/AVdS.css">
+    <link rel="stylesheet" href="CSS/filmes.css">
     <title>As vantagens de ser Invisível | filmeFlix</title>
 </head>
 <body>
    <header class="header"> <!--Cabeçalho so site--> 
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
         <nav  class="header-menu"> <!--Menu-->
-            <a class="header-menu-link-1" href="index.html" target="_self" rel="prev">Home</a>
-            <a class="header-menu-link-2" href="Divergente.html">Divergente</a>
-            <a class="header-menu-link-3" href="ES.html">Esquadrão Suicida</a>
+            <a href="index.html" class="header-menu-link-1">Home</a>
+
+            <a class="header-menu-link-2" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
+
+            <a class="header-menu-link-3" href="Divergente.html" target="_self" rel="next">Divergente</a>
+
+            <a class="header-menu-link-4" href="ES.html" target="_self" rel="next">Esquadrão Suicida</a>
         </nav>
    </header>
    <main  class="main"> <!--Corpo do site-->
