--- a/Dev.html
+++ b/Dev.html
@@ -11,10 +11,13 @@
     <header class="header"> <!--Cabeçalho do site-->
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
         <nav class="header-menu"> <!--Menu-->
-            <a class="header-menu-link-1" href="index.html">Home</a>
-            <a class="header-menu-link-2" href="AVdS.html">As vantagens de ser invisível</a>
-            <a class="header-menu-link-3" href="Divergente.html">Divergente</a>
-            <a class="header-menu-link-4" href="ES.html">Esquadrão Suicida</a>
+            <a href="index.html" class="header-menu-link-1">Home</a>
+
+            <a class="header-menu-link-2" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
+
+            <a class="header-menu-link-3" href="Divergente.html" target="_self" rel="next">Divergente</a>
+
+            <a class="header-menu-link-4" href="ES.html" target="_self" rel="next">Esquadrão Suicida</a>
         </nav>
     </header>
     <main class="main"> <!--Corpo do site-->
@@ -47,7 +50,9 @@
         </div>
     </main>
     <footer class="footer">
-        <p class="footer-text">Senac</p>
+        <p class="footer-text">
+            <a class="footer-text-link" href="Dev.html" target="_self" rel="next">Desenvolvedores</a> | Senac
+        </p>
     </footer>
 </body>
 </html>
