--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <header class="header"> <!--Cabeçalho do site-->
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
         <nav class="header-menu"> <!--Menu-->
-            <a class="header-menu-link-1" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
-            <a class="header-menu-link-2" href="Divergente.html" target="_self" rel="next">Divergente</a>
-            <a class="header-menu-link-3" href="ES.html" target="_self" rel="next">Esquadrão Suicida</a>
+            <a href="index.html" class="header-menu-link-1">Home</a>
+
+            <a class="header-menu-link-2" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
+
+            <a class="header-menu-link-3" href="Divergente.html" target="_self" rel="next">Divergente</a>
+
+            <a class="header-menu-link-4" href="ES.html" target="_self" rel="next">Esquadrão Suicida</a>
         </nav>
     </header>
     <main class="main"> <!--Corpo do site-->
