Alteração na acessibilidade do site

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
     <header class="header"> <!--Cabeçalho do site-->
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
         <nav class="header-menu"> <!--Menu-->
-            <a href="index.html" class="header-menu-link-1">Home</a>
+            <a href="index.html" class="header-menu-link-1" tabindex="1">Home</a>
 
-            <a class="header-menu-link-2" href="AVdS.html" target="_self" rel="next">As vantagens de ser invisivel</a>
+            <a class="header-menu-link-2" href="AVdS.html" target="_self" rel="next" tabindex="2">As vantagens de ser invisivel</a>
 
-            <a class="header-menu-link-3" href="Divergente.html" target="_self" rel="next">Divergente</a>
+            <a class="header-menu-link-3" href="Divergente.html" target="_self" rel="next" tabindex="3">Divergente</a>
 
-            <a class="header-menu-link-4" href="ES.html" target="_self" rel="next">Esquadrão Suicida</a>
+            <a class="header-menu-link-4" href="ES.html" target="_self" rel="next" tabindex="4">Esquadrão Suicida</a>
         </nav>
     </header>
     <main class="main"> <!--Corpo do site-->
             <div class="main-div-1"> <!--Container As vantagens de ser invisível-->
                 <h2 class="main-div-1-tittle">As vantagens de ser Invisível</h2> 
-                <img class="main-div-1-image" src="img/AVdS-m.jpg" alt=""> <!--Imagem As vantagens de er Invisível-->
+                <img class="main-div-1-image" src="img/AVdS-m.jpg" alt="Capa do filem As vantagens de ser invisivel. Fundo verde. Três pessoas lado a lado, sendo duas homens e uma mulher."> <!--Imagem As vantagens de er Invisível-->
             </div>
            <div class="main-div-2"> <!--Container Divergente-->
                 <h2 class="main-div-2-tittle">Divergente</h2>
-                <img class="main-div-2-image" src="img/D-m.png" alt=""> <!--Imagem Divergente-->
+                <img class="main-div-2-image" src="img/D-m.png" alt="Capa do filme Divergente. Fundo de uma paisagem com sol se pondo. Duas pessoas, sendo uma delas homem e a outra mulher. O homem está agachado"> <!--Imagem Divergente-->
            </div>
             <div class="main-div-3"> <!--Container Esquadrão Suicida-->
                 <h2 class="main-div-3-tittle">Esquadrão Suicida</h2>
-                <img class="main-div-3-image" src="img/SS-m.jpg" alt=""> <!--Imagem Esquadrão Suicida-->
+                <img class="main-div-3-image" src="img/SS-m.jpg" alt="Capa do filme esquadrão suicida. Fundo verde claro, com bordas rosas. Várias pessoas aparecendo."> <!--Imagem Esquadrão Suicida-->
             </div>
     </main>
     <footer class="footer"> <!--Rodape-->
