--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="log">
             <a href="login.hmtl" class="flo">Login</a>
             |
-            <a href="register" class="flop">Register</a>
+            <a href="register.html" class="flop">Register</a>
         </div>
         <nav class="header-menu"> <!--Menu-->
             <a href="index.html" class="header-menu-link-1">Home</a>
