cadatro dos filmes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header"> <!--Cabeçalho do site-->
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
         <div class="log">
-            <a href="login.hmtl" class="flo">Login</a>
+            <a href="login.html" class="flo">Login</a>
             |
             <a href="register.html" class="flop">Register</a>
         </div>
