--- a/Princ.html
+++ b/Princ.html
@@ -10,14 +10,39 @@
 <body>
     <header class="header"> <!--Cabeçalho do site-->
         <h1 class="header-tittle">filmeFlix</h1> <!--Titulo-->
-        <div class="log">
-            <a href="login.html" class="flo">Login</a>
-            |
-            <a href="register.html" class="flop">Register</a>
-        </div>
         <nav class="header-menu"> <!--Menu-->
             <a href="index.html" class="header-menu-link-1">Home</a>
+            <div class="log">
+                <a href="login.html" class="flo">Login</a>
+                |
+                <a href="register.html" class="flop">Register</a>
+            </div>
         </nav>
     </header>
+    <main>
+        <div class="films">
+        <table>
+        <caption><h1>Recentes</h1></caption>
+        <tr>
+            <td><a href="#" target="_blank"><img src="img/Venom 2.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/Lugar-Silencioso.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/Jungle.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/round6.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/Elite.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/Venom 2.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/Venom 2.jpg"></a></td>
+        </tr>
+        <tr>
+            <td><a href="#" target="_blank">Venom 2</a></td>
+            <td><a href="#" target="_blank">Um Lugar Silencioso – Parte II</a></td>
+            <td><a href="#" target="_blank">Jungle Cruise</a></td>
+            <td><a href="#" target="_blank">Round 6</a></td>
+            <td><a href="#" target="_blank">Elite</a></td>
+            <td><a href="#" target="_blank">Venom 2</a></td>
+            <td><a href="#" target="_blank">Venom 2</a></td>
+        </tr>
+        </table>
+        </div>
+    </main>
 </body>
 </html>
