--- a/Princ.html
+++ b/Princ.html
@@ -29,8 +29,8 @@
             <td><a href="#" target="_blank"><img src="img/Jungle.jpg"></a></td>
             <td><a href="#" target="_blank"><img src="img/round6.jpg"></a></td>
             <td><a href="#" target="_blank"><img src="img/Elite.jpg"></a></td>
-            <td><a href="#" target="_blank"><img src="img/Venom 2.jpg"></a></td>
-            <td><a href="#" target="_blank"><img src="img/Venom 2.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/finch.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/hy.jpg"></a></td>
         </tr>
         <tr>
             <td><a href="#" target="_blank">Venom 2</a></td>
@@ -38,8 +38,8 @@
             <td><a href="#" target="_blank">Jungle Cruise</a></td>
             <td><a href="#" target="_blank">Round 6</a></td>
             <td><a href="#" target="_blank">Elite</a></td>
-            <td><a href="#" target="_blank">Venom 2</a></td>
-            <td><a href="#" target="_blank">Venom 2</a></td>
+            <td><a href="#" target="_blank">Finch</a></td>
+            <td><a href="#" target="_blank">Hypnotic</a></td>
         </tr>
         </table>
         </div>
