pagina principal finalizada

--- a/Princ.html
+++ b/Princ.html
@@ -65,11 +65,54 @@
             <td><a href="#" target="_blank">Yellowjackets</a></td>
             <td><a href="#" target="_blank">Vingança & Castigo</a></td>
         </tr>
+        <tr><td colspan="8"><h1>Mais Titulos</h1></td></tr>
         <!--Linha 3-->
         <!--Imagens-->
+        <tr>
+            <td><a href="#" target="_blank"><img src="img/mach.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/wood.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/bo.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/arq.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/ex.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/2.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/dex.jpg"></a></td>
+        </tr>
         <!--Nomes-->
+        <tr>
+            <td><a href="#" target="_blank">Um Match Surpresa</a></td>
+            <td><a href="#" target="_blank">The Girl in the Woods</a></td>
+            <td><a href="#" target="_blank">Cowboy Bebop</a></td>
+            <td><a href="#" target="_blank">Gavião Arqueiro</a></td>
+            <td><a href="#" target="_blank">Exército de Ladrões: Invasão da Europa</a></td>
+            <td><a href="#" target="_blank">Sem Conexão: Parte 2</a></td>
+            <td><a href="#" target="_blank">Dexter: Sangue Novo</a></td>
+        </tr>
+        <!--Linha 4-->
+        <!--Imagens-->
+        <tr>
+            <td><a href="#" target="_blank"><img src="img/se.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/lega.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/myn.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/gre.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/aaaa.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/hell.jpg"></a></td>
+            <td><a href="#" target="_blank"><img src="img/maq.jpg"></a></td>
+        </tr>
+        <!--Nomes-->
+        <tr>
+            <td><a href="#" target="_blank">The Sex Lives of College Girls</a></td>
+            <td><a href="#" target="_blank">Legacies</a></td>
+            <td><a href="#" target="_blank">My Name</a></td>
+            <td><a href="#" target="_blank">Grey’s Anatomy</a></td>
+            <td><a href="#" target="_blank">Profecia do Inferno</a></td>
+            <td><a href="#" target="_blank">Hellboy</a></td>
+            <td><a href="#" target="_blank">Máquinas Mortais</a></td>
+        </tr>
         </table>
         </div>
     </main>
+    <footer class="footer"> <!--Rodape-->
+        <p class="footer-text"><a class="footer-text-link" href="Dev.html" target="_self" rel="next">Desenvolvedores</a> | Senac</p>
+    </footer>
 </body>
 </html>
