Alteração no footer para a adição do link para levar a página de cadastro de filmes

--- a/Princ.html
+++ b/Princ.html
@@ -112,6 +112,7 @@
         </div>
     </main>
     <footer class="footer"> <!--Rodape-->
+        <p class="textCadFilm"><a class="CadastroFilm" href="cad_filmes.html">Cadastro de Filmes</a></p>
         <p class="footer-text"><a class="footer-text-link" href="Dev.html" target="_self" rel="next">Desenvolvedores</a> | Senac</p>
     </footer>
 </body>
